tests/src/frontend/syntax/invalid/type_expression_with_trailing_comma.sk
fun main(): String {
  ("FAIL": String,)
}
